# CPSI-27703-Intro-to-Game-Programming-Fall-2025-Starter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SPRITE_SYSTEM_README.md  build_release.bat  build_release.sh  json_readme.md  save.json  setup.bat  setup.sh  test_level_loading.cpp  vcpkg.json
.github/workflows/: nightly-build.yml
GameDistribution/: README.txt
GameDistribution/assets/: config.xml  input_config.json  input_config_lefty.json  input_config_wasd.json  joint_examples.json  joint_test.json  spriteData.json
assets/: input_config.json  input_config_arrows.json  input_config_esdf.json  joint_examples.json  level1.json  objectData.json  serverData.json  soundData.json  spriteData.json
assets/levels/: level1.json  level2.json  level3.json  level_mainmenu.json
assets/sounds/: README.txt
assets/textures/: level1.pdn
docs/: PathfindingBehavior.md  SeekBehavior.md  level-editor-design.md
src/: BackgroundManager.cpp  BackgroundManager.h  Box2DDebugDraw.cpp  Box2DDebugDraw.h  ClientManager.cpp  ClientManager.h  CollisionManager.cpp  CollisionManager.h  Common.h  CompressionUtils.cpp  CompressionUtils.h  ConnectionManager.cpp  ConnectionManager.h  Enemy.cpp  Enemy.h  Engine.cpp  Engine.h  GlobalValueManager.cpp  GlobalValueManager.h  HostManager.cpp  HostManager.h  InputConfig.cpp  InputConfig.h  InputManager.cpp  InputManager.h  Item.cpp  Item.h  Library.h  Object.cpp  Object.h  ObjectSerializer.h  PhysicsMaterial.cpp  PhysicsMaterial.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  SaveManager.cpp  SaveManager.h  SensorEventManager.cpp  (+6 more)
src/components/: AdjustableComponent.cpp  AdjustableComponent.h  BodyComponent.cpp  BodyComponent.h  BoxBehaviorComponent.cpp  BoxBehaviorComponent.h  COMPONENT_USAGE_EXAMPLE.cpp  CollisionDamageComponent.cpp  CollisionDamageComponent.h  Component.h  ComponentLibrary.cpp  ComponentLibrary.h  DeathTriggerComponent.cpp  DeathTriggerComponent.h  ExplodeOnDeathComponent.cpp  ExplodeOnDeathComponent.h  HealthComponent.cpp  HealthComponent.h  InputComponent.cpp  InputComponent.h  InteractComponent.cpp  InteractComponent.h  JointComponent.cpp  JointComponent.h  LevelWinComponent.cpp  LevelWinComponent.h  ObjectSpawnerComponent.cpp  ObjectSpawnerComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  ProjectileWeaponComponent.cpp  ProjectileWeaponComponent.h  RailComponent.cpp  RailComponent.h  SPRITE_USAGE.md  SensorComponent.cpp  SensorComponent.h  SensorTypes.cpp  SensorTypes.h  SoundComponent.cpp  (+11 more)
src/components/behaviors/: CardinalMovementBehaviorComponent.cpp  CardinalMovementBehaviorComponent.h  GrabBehaviorComponent.cpp  GrabBehaviorComponent.h  PathfindingBehaviorComponent.cpp  PathfindingBehaviorComponent.h  SeekBehaviorComponent.cpp  SeekBehaviorComponent.h  StandardMovementBehaviorComponent.cpp  StandardMovementBehaviorComponent.h  TankMovementBehaviorComponent.cpp  TankMovementBehaviorComponent.h  ThrowBehaviorComponent.cpp  ThrowBehaviorComponent.h
src/menus/: HostMenu.cpp  HostMenu.h  HostSessionEndedMenu.cpp  HostSessionEndedMenu.h  JoinMenu.cpp  JoinMenu.h  LevelSelectMenu.cpp  LevelSelectMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  MultiplayerMenu.cpp  MultiplayerMenu.h  PauseMenu.cpp  PauseMenu.h  QuitConfirmMenu.cpp  QuitConfirmMenu.h  WaitingForHostMenu.cpp  WaitingForHostMenu.h
src/server_manager/: NetworkUtils.cpp  NetworkUtils.h  ServerManager.cpp  ServerManager.h  server_manager_main.cpp
tools/level_editor/: README.md
tools/level_editor/include/level_editor/: AssetCache.h  CameraController.h  CameraState.h  Command.h  EditorApp.h  FileService.h  LevelState.h  MapInteractionSession.h  ModalManager.h  SchemaScanner.h  SchemaService.h  SchemaTypes.h  SchemaValidator.h  ViewportController.h
tools/level_editor/include/level_editor/SpecialComponentHandlers/: MapInteractionFactory.h
tools/level_editor/include/level_editor/ToolSystem/: Tool.h
tools/level_editor/include/level_editor/ui/: ComponentEditorPanel.h  FileDialog.h  TemplateEditorModal.h  ToolbarPanel.h
tools/level_editor/schemas/: README.md
tools/level_editor/src/: AssetCache.cpp  CameraController.cpp  EditorApp.cpp  FileService.cpp  LevelState.cpp  ModalManager.cpp  SchemaScanner.cpp  SchemaService.cpp  SchemaValidator.cpp  ViewportController.cpp  main.cpp
tools/level_editor/src/SpecialComponentHandlers/: MapInteractionFactory.cpp
tools/level_editor/src/ToolSystem/: Tool.cpp
tools/level_editor/src/ui/: ComponentEditorPanel.cpp  FileDialog.cpp  TemplateEditorModal.cpp  ToolbarPanel.cpp
tools/level_editor/ui/: README.md
